--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <link rel="stylesheet" href="https://github.com/elekish/elekish.github.io/blob/main/styles.css">
     <title>Ishita Biswas - Portfolio</title>
 </head>
+    <div id="root"></div>
+
+<!-- React and ReactDOM Libraries -->
+<script src="https://unpkg.com/react@17/umd/react.development.js"></script>
+<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+
+<!-- Babel for JSX compilation in the browser (not suitable for production) -->
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+<!-- Our React Component -->
+<script type="text/babel" src="./app.js"></script>
 <body>
     <header>
         <h1>Ishita Biswas</h1>
