--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
 <!-- Our React Component -->
-<script type="text/babel" src="./app.js"></script>
+<script type="text/babel" src="https://github.com/elekish/elekish.github.io/blob/main/app.js"></script>
 <body>
     <header>
         <h1>Ishita Biswas</h1>
