--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
 <!-- Our React Component -->
-<script type="text/babel" src="https://github.com/elekish/elekish.github.io/blob/main/app.js"></script>
+<script type="text/babel" href="https://github.com/elekish/elekish.github.io/blob/main/app.js"></script>
 
     <header>
         <h1>Ishita Biswas</h1>
@@ -34,13 +34,13 @@
     <section id="portfolio">
         <h2>My Work</h2>
         <div class="project-card">
-            <img src="https://images.app.goo.gl/D5D29YQ9cxSDYDvj8" alt="Project 1">
+            <img src="https://images.app.goo.gl/D5D29YQ9cxSDYDvj8.jpg" alt="Project 1">
             <h3>House Rent Prediction</h3>
             <p>Short description of the projec</p>
             <a href="#">View Details</a>
         </div>
         <div class="project-card">
-            <img src="https://images.app.goo.gl/9cDwEBWUXLSaesyM8" alt="Project 1">
+            <img src="https://images.app.goo.gl/9cDwEBWUXLSaesyM8.jpg" alt="Project 1">
             <h3>Movie Recommendation System</h3>
             <p>Short description of the project.</p>
             <a href="#">View Details</a>
