--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
     <div id="root"></div>
 <body>
-<!-- React and ReactDOM Libraries --><!---
+<!-- React and ReactDOM Libraries 
 <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
-<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script> -->
 
-<!-- Babel for JSX compilation in the browser (not suitable for production) -->
-<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+<!-- Babel for JSX compilation in the browser (not suitable for production) 
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script> -->
 
-<!-- Our React Component -->
-<script type="text/babel" href="https://github.com/elekish/elekish.github.io/blob/main/app.js"></script> --->
+<!-- Our React Component 
+<script type="text/babel" href="https://github.com/elekish/elekish.github.io/blob/main/app.js"></script> -->
 
     <header>
         <h1>Ishita Biswas</h1>
