--- a/index.html
+++ b/index.html
@@ -3,24 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://github.com/elekish/elekish.github.io/blob/main/styles.css">
-    <title>Ishita Biswas - Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Your Name - Portfolio</title> <!-- EDIT: Change "Your Name" to your actual name. -->
 </head>
 <body>
-    <div id="root"></div>
-
-<!-- React and ReactDOM Libraries 
-<script src="https://unpkg.com/react@17/umd/react.development.js"></script>
-<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script> -->
-
-<!-- Babel for JSX compilation in the browser (not suitable for production) 
-<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script> -->
-
-<!-- Our React Component 
-<script type="text/babel" href="https://github.com/elekish/elekish.github.io/blob/main/app.js"></script> -->
-
     <header>
-        <h1>Ishita Biswas</h1>
+        <h1>Your Name</h1> <!-- EDIT: Change "Your Name" to your actual name. -->
         <nav>
             <a href="#portfolio">Portfolio</a>
             <a href="#about">About</a>
@@ -28,32 +16,28 @@
         </nav>
     </header>
 
-    <section id="landing">
-        <p>Student of Jadavpur University(Junior Year)</p>
-    </section>
+    <main>
+        <section id="landing">
+            <p>Web Designer & Developer</p> <!-- EDIT: Update the profession/title as needed. -->
+        </section>
 
-    <section id="portfolio">
-        <h2>My Work</h2>
-        <div class="project-card">
-            <img src="https://images.app.goo.gl/D5D29YQ9cxSDYDvj8.jpg" alt="Project 1">
-            <h3>House Rent Prediction</h3>
-            <p>Short description of the projec</p>
-            <a href="#">View Details</a>
-        </div>
-        <div class="project-card">
-            <img src="https://images.app.goo.gl/9cDwEBWUXLSaesyM8.jpg" alt="Project 1">
-            <h3>Movie Recommendation System</h3>
-            <p>Short description of the project.</p>
-            <a href="#">View Details</a>
-        </div>
-    </section>
+        <section id="portfolio">
+            <h2>My Work</h2>
+            <div class="project-card">
+                <img src="path_to_project_image1.jpg" alt="Project 1"> <!-- EDIT: Replace with your project image path and correct alt text. -->
+                <h3>Project Title 1</h3> <!-- EDIT: Replace "Project Title 1" with your project's title. -->
+                <p>Short description of the project.</p> <!-- EDIT: Add a short description of your project. -->
+                <a href="#">View Details</a> <!-- EDIT: Link to the project details or live site. -->
+            </div>
+            <!-- NOTE: Duplicate the above .project-card structure for other projects and fill in your details. -->
+        </section>
+    </main>
 
-    <script src="scripts.js"></script>
-   <footer>
-        <p>© 2023 by Ishita Biswas. All rights reserved.</p>
+    <footer>
+        <p>© 2023 by Your Name. All rights reserved.</p> <!-- EDIT: Update the year and name accordingly. -->
         <div>
-            <a href="https://www.kaggle.com/isabbaggin">Kaggle</a> | 
-            <a href="https://www.linkedin.com/in/ishita-b-080412226">LinkedIn</a>
+            <a href="#">Twitter</a> <!-- EDIT: Link to your Twitter profile. -->
+            <a href="#">LinkedIn</a> <!-- EDIT: Link to your LinkedIn profile. -->
         </div>
     </footer>
 </body>
