--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://github.com/elekish/elekish.github.io/blob/main/styles.css">
     <title>Your Name - Portfolio</title> <!-- EDIT: Change "Your Name" to your actual name. -->
 </head>
 <body>
