--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
                 <p>Short description of the project.</p> <!-- EDIT: Add a short description of your project. -->
                 <a href="#">View Details</a> <!-- EDIT: Link to the project details or live site. -->
             </div>
-            <!-- NOTE: Duplicate the above .project-card structure for other projects and fill in your details. -->
+            <div class="project-card">
+                <img src="path_to_project_image1.jpg" alt="Project 1"> <!-- EDIT: Replace with your project image path and correct alt text. -->
+                <h3>Project Title 1</h3> <!-- EDIT: Replace "Project Title 1" with your project's title. -->
+                <p>Short description of the project.</p> <!-- EDIT: Add a short description of your project. -->
+                <a href="#">View Details</a> <!-- EDIT: Link to the project details or live site. -->
+            </div>
         </section>
     </main>
 
