--- a/index.html
+++ b/index.html
@@ -3,35 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://github.com/elekish/elekish.github.io/blob/main/styles.css">
+    <style>
+       <link rel="stylesheet" href="https://github.com/elekish/elekish.github.io/blob/main/styles.css">
+    </style>
     <title>Your Name - Portfolio</title> <!-- EDIT: Change "Your Name" to your actual name. -->
 </head>
 <body>
     <header>
-        <h1>Your Name</h1> <!-- EDIT: Change "Your Name" to your actual name. -->
+        <h1>Ishita Biswas</h1> <!-- EDIT: Change "Your Name" to your actual name. -->
         <nav>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#about">About</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
 
     <main>
         <section id="landing">
-            <p>Web Designer & Developer</p> <!-- EDIT: Update the profession/title as needed. -->
+            <p>Student</p> <!-- EDIT: Update the profession/title as needed. -->
         </section>
 
         <section id="portfolio">
             <h2>My Work</h2>
             <div class="project-card">
                 <img src="path_to_project_image1.jpg" alt="Project 1"> <!-- EDIT: Replace with your project image path and correct alt text. -->
-                <h3>Project Title 1</h3> <!-- EDIT: Replace "Project Title 1" with your project's title. -->
+                <h3>House Rent</h3> <!-- EDIT: Replace "Project Title 1" with your project's title. -->
                 <p>Short description of the project.</p> <!-- EDIT: Add a short description of your project. -->
                 <a href="#">View Details</a> <!-- EDIT: Link to the project details or live site. -->
             </div>
             <div class="project-card">
                 <img src="path_to_project_image1.jpg" alt="Project 1"> <!-- EDIT: Replace with your project image path and correct alt text. -->
-                <h3>Project Title 1</h3> <!-- EDIT: Replace "Project Title 1" with your project's title. -->
+                <h3>Movie Reco</h3> <!-- EDIT: Replace "Project Title 1" with your project's title. -->
                 <p>Short description of the project.</p> <!-- EDIT: Add a short description of your project. -->
                 <a href="#">View Details</a> <!-- EDIT: Link to the project details or live site. -->
             </div>
@@ -39,7 +39,7 @@
     </main>
 
     <footer>
-        <p>© 2023 by Your Name. All rights reserved.</p> <!-- EDIT: Update the year and name accordingly. -->
+        <p>© 2023 by Ishita Biswas. All rights reserved.</p> <!-- EDIT: Update the year and name accordingly. -->
         <div>
             <a href="#">Twitter</a> <!-- EDIT: Link to your Twitter profile. -->
             <a href="#">LinkedIn</a> <!-- EDIT: Link to your LinkedIn profile. -->
