--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-       <link rel="stylesheet" href="https://github.com/elekish/elekish.github.io/blob/main/styles.css">
+       <link type="text/css" rel="stylesheet" href="https://github.com/elekish/elekish.github.io/blob/main/styles.css"/>
     </style>
     <title>Your Name - Portfolio</title> <!-- EDIT: Change "Your Name" to your actual name. -->
 </head>
