--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-       <link type="text/css" rel="stylesheet" href="https://github.com/elekish/elekish.github.io/blob/main/styles.css"/>
-    </style>
-    <title>Your Name - Portfolio</title> <!-- EDIT: Change "Your Name" to your actual name. -->
+    <link rel="stylesheet" href="styles.css">
+    <title>Ishita Biswas - Portfolio</title> 
 </head>
 <body>
     <header>
-        <h1>Ishita Biswas</h1> <!-- EDIT: Change "Your Name" to your actual name. -->
+        <h1>Ishita Biswas</h1> 
         <nav>
             <a href="#contact">Contact</a>
         </nav>
@@ -18,20 +16,20 @@
 
     <main>
         <section id="landing">
-            <p>Student</p> <!-- EDIT: Update the profession/title as needed. -->
+            <p>Student at Jadavpur University</p> 
         </section>
 
         <section id="portfolio">
             <h2>My Work</h2>
             <div class="project-card">
-                <img src="path_to_project_image1.jpg" alt="Project 1"> <!-- EDIT: Replace with your project image path and correct alt text. -->
-                <h3>House Rent</h3> <!-- EDIT: Replace "Project Title 1" with your project's title. -->
+                <img src="https://images.app.goo.gl/1WycNoYNPgZFGzWH8.jpg" alt="House"> 
+                <h3>House rent</h3> 
                 <p>Short description of the project.</p> <!-- EDIT: Add a short description of your project. -->
                 <a href="#">View Details</a> <!-- EDIT: Link to the project details or live site. -->
             </div>
             <div class="project-card">
-                <img src="path_to_project_image1.jpg" alt="Project 1"> <!-- EDIT: Replace with your project image path and correct alt text. -->
-                <h3>Movie Reco</h3> <!-- EDIT: Replace "Project Title 1" with your project's title. -->
+                <img src="https://images.app.goo.gl/MJPc2bFShToVkE3bA.jpg" alt="Movie"> 
+                <h3>Movie Recommender</h3> 
                 <p>Short description of the project.</p> <!-- EDIT: Add a short description of your project. -->
                 <a href="#">View Details</a> <!-- EDIT: Link to the project details or live site. -->
             </div>
@@ -39,7 +37,7 @@
     </main>
 
     <footer>
-        <p>© 2023 by Ishita Biswas. All rights reserved.</p> <!-- EDIT: Update the year and name accordingly. -->
+        <p>© 2023 by Your Name. All rights reserved.</p> <!-- EDIT: Update the year and name accordingly. -->
         <div>
             <a href="#">Twitter</a> <!-- EDIT: Link to your Twitter profile. -->
             <a href="#">LinkedIn</a> <!-- EDIT: Link to your LinkedIn profile. -->
