--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <div class="project-card">
                 <img src="https://images.app.goo.gl/1WycNoYNPgZFGzWH8.jpg" alt="House"> 
                 <h3>House rent</h3> 
-                <p>Short description of the project.</p> <!-- EDIT: Add a short description of your project. -->
-                <a href="#">View Details</a> <!-- EDIT: Link to the project details or live site. -->
+                <p>Short description of the project.</p> 
+                <a href="#">View Details</a> 
             </div>
             <div class="project-card">
                 <img src="https://images.app.goo.gl/MJPc2bFShToVkE3bA.jpg" alt="Movie"> 
