--- a/index.html
+++ b/index.html
@@ -3,45 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>Ishita Biswas - Portfolio</title> 
+    <title>Your Name - Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #1a1a1a;
+            color: #fff;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #333;
+            padding: 20px;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 36px;
+            margin: 0;
+        }
+
+        nav {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+
+        nav a {
+            text-decoration: none;
+            color: #fff;
+            margin: 0 20px;
+            font-size: 18px;
+        }
+
+        section {
+            padding: 40px;
+        }
+
+        .project {
+            background-color: #333;
+            margin: 20px 0;
+            padding: 20px;
+        }
+
+        .project h2 {
+            font-size: 24px;
+            margin: 0;
+        }
+
+        .project p {
+            font-size: 16px;
+        }
+
+        footer {
+            background-color: #333;
+            padding: 20px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>Ishita Biswas</h1> 
+        <h1>Your Name</h1>
         <nav>
+            <a href="#about">About</a>
+            <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
 
-    <main>
-        <section id="landing">
-            <p>Student at Jadavpur University</p> 
-        </section>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Write a short introduction about yourself here.</p>
+    </section>
 
-        <section id="portfolio">
-            <h2>My Work</h2>
-            <div class="project-card">
-                <img src="https://images.app.goo.gl/1WycNoYNPgZFGzWH8.jpg" alt="House"> 
-                <h3>House rent</h3> 
-                <p>Short description of the project.</p> 
-                <a href="#">View Details</a> 
-            </div>
-            <div class="project-card">
-                <img src="https://images.app.goo.gl/MJPc2bFShToVkE3bA.jpg" alt="Movie"> 
-                <h3>Movie Recommender</h3> 
-                <p>Short description of the project.</p> <!-- EDIT: Add a short description of your project. -->
-                <a href="#">View Details</a> <!-- EDIT: Link to the project details or live site. -->
-            </div>
-        </section>
-    </main>
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="project">
+            <h2>Project 1</h2>
+            <p>Description of your first project.</p>
+        </div>
+        <div class="project">
+            <h2>Project 2</h2>
+            <p>Description of your second project.</p>
+        </div>
+    </section>
+
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>Contact information goes here.</p>
+    </section>
 
     <footer>
-        <p>© 2023 by Your Name. All rights reserved.</p> <!-- EDIT: Update the year and name accordingly. -->
-        <div>
-            <a href="#">Twitter</a> <!-- EDIT: Link to your Twitter profile. -->
-            <a href="#">LinkedIn</a> <!-- EDIT: Link to your LinkedIn profile. -->
-        </div>
+        &copy; 2023 Your Name
     </footer>
 </body>
 </html>
