--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Ishita Biswas - Portfolio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -65,7 +65,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
+        <h1>Ishita Biswas</h1>
         <nav>
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
@@ -75,28 +75,48 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Write a short introduction about yourself here.</p>
+        <p>In the hallowed halls of Jadavpur University, a place where intellect thrives and innovation reigns supreme, there exists a student, in the Department of Instrumentation and Electronics Engineering. The alchemy of code and creativity is my muse, as I sculpt elegant solutions from lines of logic</p>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
-            <h2>Project 1</h2>
-            <p>Description of your first project.</p>
+            <h2>Housing Rent Prediction</h2>
+            <p>In the heart of the digital wilderness, this project commences with the promise of deciphering the cryptic world of real estate pricing.
+                <strong>The Tale goes as:</strong>
+                <ul>
+                    <li><em>The Data Chronicles:</em>The project's journey commences with a treasure chest of housing data, rich with property features, locations, and, most importantly, their prices. </li>
+                    <li><em>The Algorithmic Odyssey:</em> The journey takes us through the intricate woods of regression models, decision trees, and ensemble techniques.</li>
+                    <li><em>The Test of Fortitude:</em>The models are pit against rigorous trials, splitting the data into training and testing sets. Metrics like RMSE and MAE become the yardsticks by which success is measured. </li>
+                    <li><em> The Grand Finale:</em>A web application or API is a gateway to share the magic with the world.</li>
+                </ul>
+            </p>
         </div>
         <div class="project">
-            <h2>Project 2</h2>
-            <p>Description of your second project.</p>
+            <h2>Movie Recommendation System</h2>
+            <p>Welcome to the world of Movie Magic! I've embarked on a thrilling journey to create a Movie Recommendation System that transforms movie-watching into an interactive adventure. In this narrative, you become the protagonist, and your preferences shape the story.
+
+<strong>The Tale Unfolds</strong>:
+
+Once upon a time, in the land of cinematic wonders, a recommendation system emerged. Its mission was to provide movie enthusiasts with the ultimate viewing experience. But this wasn't just any system; it was designed to understand you, the viewer.
+           <ul>
+               <li><em>Discover Your Movie Persona</em>: You share your preferences and viewing history, and the system becomes your guide, helping you discover your unique movie persona.</li>
+               <li><em>The Content Quest</em>: Utilizing content filtering, the system collaborates with fellow movie lovers to unearth hidden gems and popular classics alike.</li>
+               <li><em>The Data Chronicles</em>: Our journey involves a treasure trove of movie data, which we meticulously preprocess to create a seamless viewing experience.</li>
+               <li><em>The Magic Algorithm</em>s: Along the way, we encounter recommendation algorithms that analyze your choices, including user-based and item-based filtering</li>
+               <li><em>Judgment Day</em>: As the adventure unfolds, we face a critical juncture - the evaluation stage, where the system's performance is assessed to ensure your movie journey is nothing short of magical.</li>
+           </ul>
+            </p>
         </div>
     </section>
 
     <section id="contact">
         <h2>Contact Me</h2>
-        <p>Contact information goes here.</p>
+        <p><a href=mailto:rosellaevenstar@gmail.com>Click Here.</a></p>
     </section>
 
     <footer>
-        &copy; 2023 Your Name
+        &copy; 2023 Ishita Biswas
     </footer>
 </body>
 </html>
