--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
         <div class="project">
             <h2>Housing Rent Prediction</h2>
             <p>In the heart of the digital wilderness, this project commences with the promise of deciphering the cryptic world of real estate pricing.
-                <strong>The Tale goes as:</strong>
+                <br>
+                <strong>The Tale goes as:</strong><br>
                 <ul>
                     <li><em>The Data Chronicles:</em>The project's journey commences with a treasure chest of housing data, rich with property features, locations, and, most importantly, their prices. </li>
                     <li><em>The Algorithmic Odyssey:</em> The journey takes us through the intricate woods of regression models, decision trees, and ensemble techniques.</li>
@@ -95,8 +96,8 @@
         <div class="project">
             <h2>Movie Recommendation System</h2>
             <p>Welcome to the world of Movie Magic! I've embarked on a thrilling journey to create a Movie Recommendation System that transforms movie-watching into an interactive adventure. In this narrative, you become the protagonist, and your preferences shape the story.
-
-<strong>The Tale Unfolds</strong>:
+            <br>
+<strong>The Tale Unfolds</strong>:<br>
 
 Once upon a time, in the land of cinematic wonders, a recommendation system emerged. Its mission was to provide movie enthusiasts with the ultimate viewing experience. But this wasn't just any system; it was designed to understand you, the viewer.
            <ul>
