--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ishita Biswas - My Portfolio</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap">
-    <style>
+   <!-- <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #1a1a1a;
@@ -63,7 +63,7 @@
             padding: 20px;
             text-align: center;
         }
-    </style>
+    </style> -->
 </head>
 <body>
     <header>
