--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ishita Biswas - My Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+   <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap">
-   <!-- <style>
+    <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Josefin Sans', sans-serif;
             background-color: #1a1a1a;
             color: #fff;
             margin: 0;
@@ -63,7 +63,7 @@
             padding: 20px;
             text-align: center;
         }
-    </style> -->
+    </style> 
 </head>
 <body>
     <header>
@@ -77,7 +77,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>In the hallowed halls of Jadavpur University, a place where intellect thrives and innovation reigns supreme, there exists a student, in the Department of Instrumentation and Electronics Engineering. The alchemy of code and creativity is my muse, as I sculpt elegant solutions from lines of logic</p>
+        <p text-align:center>Hi. <br> You will find me in the hallowed halls of Jadavpur University, a place where intellect thrives and innovation reigns supreme, in the Department of Instrumentation and Electronics Engineering. <br>The alchemy of code and creativity is my muse, as I sculpt elegant solutions from lines of logic.</p>
     </section>
 
     <section id="projects">
@@ -119,7 +119,7 @@ Once upon a time, in the land of cinematic wonders, a recommendation system emer
     </section>
 
     <footer>
-        &copy; 2023 Ishita Biswas
+        &copy; 2023 Ishita Biswas, All rights reserved.
     </footer>
 </body>
 </html>
