--- a/index.html
+++ b/index.html
@@ -77,7 +77,20 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p text-align:center>Hi. <br> You will find me in the hallowed halls of Jadavpur University, a place where intellect thrives and innovation reigns supreme, in the Department of Instrumentation and Electronics Engineering. <br>The alchemy of code and creativity is my muse, as I sculpt elegant solutions from lines of logic.</p>
+        <p>Hi. <br> You will find me in the hallowed halls of Jadavpur University, a place where intellect thrives and innovation reigns supreme, in the Department of Instrumentation and Electronics Engineering. <br>The alchemy of code and creativity is my muse, as I sculpt elegant solutions from lines of logic.</p>
+     <br>
+        Some of my achievenments ans works include:<br>
+        <ul>
+            <li>I was ranked 139 in Techgig Geek Goddess 2022, a coding even organised by Techgig.</li>
+            <li>I was ranked 1681 in CodeKaze Sept'23, organised by coding Ninjas.</li>
+            <li>I was ranked 2910 in Google Kickstart 2022, a competitive programming competition organised by google.</li>
+            <li>I have a machine learning course certification from Kaggle.</li>
+            <li>I have qualified in Smart India Hackathon 2023 first round.</li>
+            <li>I have worked as a volunteer in AICSSYC, IEEE Jadavpur Branch, which was a three day event that tookplace in Mandarmani. I was responsible for gathering sponsors and coordination of event timings. </li>
+            <li>I have also worked as an event coordinator in the Tech fest Srijan of my college.</li>
+        </ul>
+        Apart from all these I enjoy Table tennis and love creating new content at Youtube.
+    
     </section>
 
     <section id="projects">
@@ -85,6 +98,7 @@
         <div class="project">
             <h2>Housing Rent Prediction</h2>
             <p>In the heart of the digital wilderness, this project commences with the promise of deciphering the cryptic world of real estate pricing.
+                <br>
                 <br>
                 <strong>The Tale goes as:</strong><br>
                 <ul>
@@ -99,6 +113,7 @@
             <h2>Movie Recommendation System</h2>
             <p>Welcome to the world of Movie Magic! I've embarked on a thrilling journey to create a Movie Recommendation System that transforms movie-watching into an interactive adventure. In this narrative, you become the protagonist, and your preferences shape the story.
             <br>
+                <br>
 <strong>The Tale Unfolds</strong>:<br>
 
 Once upon a time, in the land of cinematic wonders, a recommendation system emerged. Its mission was to provide movie enthusiasts with the ultimate viewing experience. But this wasn't just any system; it was designed to understand you, the viewer.
