--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </li>
             <li>I have also worked as an event coordinator in the Tech fest Srijan of my college.</li>
         </ul>
-        Apart from all these I enjoy Table tennis and love creating new content at <u><i><a class="project-link" href="https://www.youtube.com/">Youtube</a></i></u>
+        Apart from all these I enjoy Table tennis and love creating new content at <u><i><a class="project-link" href="https://youtube.com/@Artisticcc?si=FRzyj5zX9FnRAh3k">Youtube</a></i></u>
 
     </section>
 
