--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
         .project p {
             font-size: 16px;
         }
+        mark{
+            background-color:#818589
+            color: white
+            }
 
         footer {
             background-color: #333;
@@ -106,7 +110,7 @@
 
 <body>
     <header>
-        <h1 class="title">Ishita Biswas</h1>
+        <h2 class="title">My Portfolio</h2>
         <nav>
             <a class="nav-links" href="#about">About</a>
             <a class="nav-links" href="#projects">Projects</a>
@@ -116,7 +120,9 @@
 
     <section id="about">
         <h1>About Me</h1>
-        <p>Hi. <br> You will find me in the hallowed halls of Jadavpur University, a place where intellect thrives and
+        <p>Hi. <br>
+        <mark>I am Ishita Biswas.</mark><br>
+        You will find me in the hallowed halls of Jadavpur University, a place where intellect thrives and
             innovation reigns supreme, in the Department of Instrumentation and Electronics Engineering. <br>The alchemy
             of code and creativity is my muse, as I sculpt elegant solutions from lines of logic.</p>
         <br>
