--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <h1>About Me</h1>
         <p>Hi. <br>
             <br>
-        <mark>I am Ishita Biswas.</mark><br>
+        <h3>I am Ishita Biswas.</h3><br>
             <br>
         You will find me in the hallowed halls of Jadavpur University, a place where intellect thrives and
             innovation reigns supreme, in the Department of Instrumentation and Electronics Engineering. <br>The alchemy
